# Project-TOEP

./: Cargo.toml  Dockerfile  README.md
examples/factors/: README.md  metadata.scale  output.elf  transactions.json
examples/factors/factors/: Cargo.toml  metadata.scale
examples/factors/factors/src/: main.rs
examples/factors/methods/: build.rs
examples/factors/methods/guest/: Cargo.toml
node/node/src/: chain_spec.rs
node/pallets/prover-mgmt/: Cargo.toml
node/pallets/prover-mgmt/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
prover/: Cargo.toml  metadata.scale
prover/methods/: Cargo.toml
prover/prover/: Cargo.toml
prover/prover/src/: main.rs
prover/src/: main.rs
